--- a/src/ckanext-regx/ckanext/regx/templates/index.html
+++ b/src/ckanext-regx/ckanext/regx/templates/index.html
@@ -1,12 +1,30 @@
-<html>
+<!-- <!DOCTYPE html>
+<html lang="en">
 
 <head>
-    <title>Regx Plugin</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Regx Extension</title>
+    <link rel="stylesheet" href="public/css/regx.css">
 </head>
 
 <body>
-    <h1>Welcome to the Regx Plugin!</h1>
-    <p>My Message</p>
+    <div class=".sherry">
+        <h1>Welcome to Regx!</h1>
+        <p>This is the Regx extension page.</p>
+    </div>
 </body>
 
-</html>
+</html> -->
+
+{% extends "page.html" %}
+
+{% block content %}
+<div class="regx-container">
+    {% include "side_nav.html" %}
+    <div class="main-content">
+        <h1>Welcome to the Regx Extension</h1>
+        <p>This is the default page for your Regx extension.</p>
+    </div>
+</div>
+{% endblock %}
