--- a/src/ckanext-regx/ckanext/regx/templates/header.html
+++ b/src/ckanext-regx/ckanext/regx/templates/header.html
@@ -75,6 +75,7 @@
                 {% block header_logo %}
                 {% if g.site_logo %}
                 <a class="logo" href="{{ h.url_for('home.index') }}">
+                    <!-- <img src="{{ h.url_for_static('/images/void_logo.png') }}" alt="Void Logo" title="Void Logo" /> -->
                     <img src="{{ h.url_for_static_or_external(g.site_logo) }}" alt="{{ g.site_title }}"
                         title="{{ g.site_title }}" />
                 </a>
@@ -108,13 +109,17 @@
                     (org_type ~ '.index',
                     h.humanize_entity_type('organization', org_type, 'main nav') or _('Organizations'),
                     ['organization']),
-                    (group_type ~ '.index',
-                    h.humanize_entity_type('group', group_type, 'main nav') or _('Groups'), ['group']),
+
                     ('home.about', _('About')),
                     ) }}
                     {% if c.user %} <!-- Show Regx only if user is logged in -->
                     <li>
                         <a href="{{ h.url_for('regx.index') }}">{{ _('Regx') }}</a>
+                    </li>
+                    {% endif %}
+                    {% if c.user and c.userobj.sysadmin %} <!-- Show All Profiles only if user is admin -->
+                    <li>
+                        <a href="{{ h.url_for('regx.admin_all_profiles') }}">{{ _('All Profiles') }}</a>
                     </li>
                     {% endif %}
                     {% endblock %}
