--- a/src/ckanext-regx/ckanext/regx/templates/side_nav.html
+++ b/src/ckanext-regx/ckanext/regx/templates/side_nav.html
@@ -2,8 +2,15 @@
 <div class="side-nav">
     <ul>
         <li><a href="{{ h.url_for('regx.index') }}">🏠 Home</a></li>
-        <li><a href="{{ h.url_for('regx.company_form') }}">📋 Company Form</a></li>
-        <li><a href="#">📂 Another Page</a></li>
-        <li><a href="#">⚙️ Settings</a></li>
+        {% if c.user and not c.userobj.sysadmin %}
+        <li><a href="{{ h.url_for('regx.company_form') }}">📋 Company Profile</a></li>
+        <li><a href="#">📂 Edit Profile</a></li>
+        {% endif %}
+        {% if c.user and c.userobj.sysadmin %}
+        <li><a href="{{ h.url_for('regx.admin_all_user_profiles') }}">⚙️ All Users</a></li>
+        <li><a href="{{ h.url_for('regx.admin_all_profiles') }}">📋 Company Profiles</a></li>
+        <li><a href="#">⚙️ Web Scrapping</a></li>
+        {% endif %}
+
     </ul>
 </div>
