--- a/src/ckanext-regx/ckanext/regx/public/css/styles.css
+++ b/src/ckanext-regx/ckanext/regx/public/css/styles.css
@@ -184,3 +184,23 @@ h1 {
 .btn-info:hover {
     background-color: #138496;
 }
+
+/* flash messages */
+.flash-messages .alert {
+    padding: 10px;
+    margin-bottom: 10px;
+    border-radius: 4px;
+    font-size: 14px;
+}
+
+.flash-messages .alert-success {
+    color: #155724;
+    background-color: #d4edda;
+    border: 1px solid #c3e6cb;
+}
+
+.flash-messages .alert-error {
+    color: #721c24;
+    background-color: #f8d7da;
+    border: 1px solid #f5c6cb;
+}
