--- a/src/ckanext-regx/ckanext/regx/templates/index.html
+++ b/src/ckanext-regx/ckanext/regx/templates/index.html
@@ -20,9 +20,11 @@
 {% extends "page.html" %}
 
 {% block content %}
+{% import "macros/flash_messages.html" as messages %}
 <div class="regx-container">
     {% include "side_nav.html" %}
     <div class="main-content">
+        {{ messages.flash_messages() }}
         <h1>Welcome to the Regx Extension</h1>
         <p>This is the default page for your Regx extension.</p>
     </div>
