--- a/src/ckanext-regx/ckanext/regx/templates/edit_company.html
+++ b/src/ckanext-regx/ckanext/regx/templates/edit_company.html
@@ -58,7 +58,7 @@
 <div class="regx-container">
     {% include "side_nav.html" %}
     <div class="main-content">
-        <h1>Edit Company Details</h1>
+        <h1>Edit Company Profile</h1>
 
         <!-- Form -->
         <form action="{{ h.url_for('regx.submit_company') }}" method="post" class="modern-form">
@@ -75,7 +75,7 @@
                 <label for="address">Offical Email</label>
                 <input type="email" id="address" name="address" placeholder="name@example.com" required />
             </div>
-            <button type="submit" class="btn-submit">Submit</button>
+            <button type="submit" class="btn-submit">Request Changes</button>
         </form>
     </div>
 </div>
