--- a/src/ckanext-regx/ckanext/regx/templates/search_company.html
+++ b/src/ckanext-regx/ckanext/regx/templates/search_company.html
@@ -3,51 +3,6 @@
 {% block styles %}
 {{ super() }}
 <style>
-    .modal {
-        display: none;
-        /* Hidden by default */
-        position: fixed;
-        /* Stay in place */
-        z-index: 1;
-        /* Sit on top */
-        left: 0;
-        top: 0;
-        width: 100%;
-        /* Full width */
-        height: 100%;
-        /* Full height */
-        overflow: auto;
-        /* Enable scroll if needed */
-        background-color: rgb(0, 0, 0);
-        /* Fallback color */
-        background-color: rgba(0, 0, 0, 0.4);
-        /* Black w/ opacity */
-    }
-
-    .modal-content {
-        background-color: #fefefe;
-        margin: 15% auto;
-        /* 15% from the top and centered */
-        padding: 20px;
-        border: 1px solid #888;
-        width: 80%;
-        /* Could be more or less, depending on screen size */
-    }
-
-    .close {
-        color: #aaa;
-        float: right;
-        font-size: 28px;
-        font-weight: bold;
-    }
-
-    .close:hover,
-    .close:focus {
-        color: black;
-        text-decoration: none;
-        cursor: pointer;
-    }
-
     .search-container {
         display: flex;
         justify-content: center;
@@ -146,7 +101,6 @@
                         <th>Address</th>
                         <th>Website</th>
                         <th>Created</th>
-                        <th>ID</th>
                         <th>Action</th>
                     </tr>
                 </thead>
@@ -157,7 +111,6 @@
                         <td>{{ company[1] }}</td>
                         <td><a href="{{ company[2] }}" target="_blank">{{ company[2] }}</a></td>
                         <td>{{ company[3].strftime('%Y-%m-%d') if company[3] else 'N/A' }}</td>
-                        <td>{{ company[4] }}</td>
                         <td>
                             <a href="{{ url_for('regx.edit_company', company_id=company[4]) }}"
                                 class="btn btn-primary request-edit-btn">
@@ -172,7 +125,7 @@
         </div>
         {% else %}
         <div class="search-results">
-            <p>No company found, please try a different ID.</p>
+            <p>No Record Found.</p>
         </div>
 
         {% endif %}
