--- a/src/ckanext-regx/ckanext/regx/templates/update_claim_form.html
+++ b/src/ckanext-regx/ckanext/regx/templates/update_claim_form.html
@@ -6,7 +6,7 @@
     .modern-form {
         max-width: 600px;
         margin: 20px auto;
-        background: #fff;
+        background: #faf9f9;
         padding: 20px;
         border-radius: 8px;
         box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -27,7 +27,8 @@
         width: 100%;
         padding: 10px;
         font-size: 14px;
-        border: 1px solid #ddd;
+        background: #fcfbfb;
+        border: 1px solid #b51919;
         border-radius: 4px;
     }
 
@@ -58,24 +59,23 @@
 <div class="regx-container">
     {% include "side_nav.html" %}
     <div class="main-content">
-        <h1>Edit Company Profile</h1>
-
-        <!-- Form -->
-        <form action="{{ h.url_for('regx.submit_company') }}" method="post" class="modern-form">
+        <h1>Update Company Details</h1>
+        <form action="{{ url_for('regx.update_claim_form', company_id=company_obj[0]) }}" method="post"
+            class="modern-form">
             {{ h.csrf_input() }}
             <div class="form-group">
                 <label for="company_name">Company Name</label>
-                <input type="text" id="company_name" name="company_name" placeholder="Enter company name" required />
+                <input type="text" id="company_name" name="company_name" value="{{ company_obj[1] }}" required>
             </div>
             <div class="form-group">
                 <label for="website">Website</label>
-                <input type="url" id="website" name="website" placeholder="https://example.com" required />
+                <input type="url" id="website" name="website" value="{{ company_obj[2] }}" required readonly>
             </div>
             <div class="form-group">
-                <label for="address">Offical Email</label>
-                <input type="email" id="address" name="address" placeholder="name@example.com" required />
+                <label for="email_address">Official Email</label>
+                <input type="email" id="email_address" name="email_address" value="{{ company_obj[3] }}" required>
             </div>
-            <button type="submit" class="btn-submit">Request Changes</button>
+            <button type="submit" class="btn-submit">Update Record</button>
         </form>
     </div>
 </div>
