--- a/src/ckanext-regx/ckanext/regx/templates/update_claim_form.html
+++ b/src/ckanext-regx/ckanext/regx/templates/update_claim_form.html
@@ -61,7 +61,7 @@
     <div class="main-content">
         <h1>Update Company Details</h1>
         <form action="{{ url_for('regx.update_claim_form', company_id=company_obj[0]) }}" method="post"
-            class="modern-form">
+            class="modern-form" id="update_claim_f">
             {{ h.csrf_input() }}
             <div class="form-group">
                 <label for="company_name">Company Name</label>
@@ -75,8 +75,37 @@
                 <label for="email_address">Official Email</label>
                 <input type="email" id="email_address" name="email_address" value="{{ company_obj[3] }}" required>
             </div>
-            <button type="submit" class="btn-submit">Update Record</button>
+            <button type="submit" id='update_claim_btn' class="btn-submit">Update Record</button>
         </form>
     </div>
 </div>
+<script>
+    // Handle OTP Submission
+    document.querySelector("#update_claim_f").addEventListener("submit", async function (e) {
+        e.preventDefault();
+        const form = e.target;
+        const formData = new FormData(form);
+        const submitButton = form.querySelector(".update_claim_btn");
+
+        try {
+            const response = await fetch(form.action, {
+                method: form.method,
+                body: formData,
+            });
+
+            const result = await response.json();
+
+            if (response.ok && result.redirect_url) {
+                alert(result.message); // Show success message
+                window.location.href = result.redirect_url; // Redirect to the specified URL
+            } else {
+                alert(result.message); // Show error message
+            }
+        } catch (error) {
+            alert("An unexpected error occurred. Please try again.");
+            console.error("Error in form submission:", error);
+        }
+    });
+
+</script>
 {% endblock %}
