Working logic of update and claim with seprate table

--- a/src/ckanext-regx/ckanext/regx/templates/claim_profile.html
+++ b/src/ckanext-regx/ckanext/regx/templates/claim_profile.html
@@ -26,8 +26,12 @@
                     <input type="url" id="website" name="website" placeholder="Enter your official website" required>
                 </div>
                 <div class="claim-form-group">
-                    <label for="email">Official Email Address</label>
+                    <label for="email">Your Email Address</label>
                     <input type="email" id="email" name="email" placeholder="Enter your official email" required>
+                </div>
+                <div class="claim-form-group">
+                    <label for="role">Role in Company</label>
+                    <input type="text" id="role" name="role" placeholder="e.g HR Manager" required>
                 </div>
                 <button type="submit" class="claim-form-btn">Send OTP</button>
             </form>
