--- a/src/ckanext-regx/ckanext/regx/templates/update_claim_form.html
+++ b/src/ckanext-regx/ckanext/regx/templates/update_claim_form.html
@@ -72,7 +72,7 @@
                 <input type="url" id="website" name="website" value="{{ company_obj[2] }}" required readonly>
             </div>
             <div class="form-group">
-                <label for="email_address">Official Email</label>
+                <label for="email_address">Company Email</label>
                 <input type="email" id="email_address" name="email_address" value="{{ company_obj[3] }}" required>
             </div>
             <button type="submit" id='update_claim_btn' class="btn-submit">Update Record</button>
